# pscbfm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmarkGTX650Ti.sh
projects/: CMakeLists.txt
src/: AnalyzerMsd.tpp  findBestZCurveFrontOrder.cpp  gpuinfo.cpp
src/pscbfm/: FeatureNetwork.h  GPUScBFM_AB_Type.h  SelectiveLogger.cpp  SelectiveLogger.hpp  UpdaterGPUScBFM_AB_Type.cu  UpdaterGPUScBFM_AB_Type.h  cudacommon.hpp  graphColoring.cpp  graphColoring.h  graphColoring.tpp  mainCUDASimulatorGPUScBFM_AB_Type.cpp  mainColorBFM.cpp  testCorrectness.sh  testCudacommon.cpp
src/pscbfm/rngs/: Hash.h  PCG.h  RNGload.h  RNGtemplate.h  Saru.h  lemonade_philox.h  testTemplate.cpp
